# 3250project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
paper/: IEEEtran.cls  main.tex  references.bib
results/figures/: slides.pptx
src/: __init__.py
src/algorithms/: __init__.py  cfs.py  eevdf.py  fcfs.py  mlfq.py  round_robin.py  sjf.py
src/core/: __init__.py  cpu.py  event.py  metrics.py  process.py  rbtree.py  scheduler_base.py
src/experiments/: __init__.py  make_figures.py  make_poster.py  make_slides.py  microbench_rbtree.py  run_all.py
src/visualization/: __init__.py  comparison.py  gantt.py  rbtree_viz.py
src/workloads/: __init__.py  synthetic.py  trace_loader.py
tests/: conftest.py  test_cfs.py  test_cpu.py  test_eevdf.py  test_event.py  test_fcfs.py  test_metrics.py  test_microbench_rbtree.py  test_mlfq.py  test_process.py  test_rbtree.py  test_rbtree_viz.py  test_round_robin.py  test_simulator.py  test_sjf.py  test_smoke.py  test_synthetic.py  test_trace_loader.py
